# ChaoticCore

./: .clang-format  CMakeLists.txt  card.cpp  card.h  chaotic_api.cpp  chaotic_api.h  chaotic_api_types.h  common.h  effect.cpp  effect.h  effect_constants.h  field.cpp  field.h  group.cpp  group.h  internal_common.cpp  internal_common.h  library.h  lua_obj.cpp  lua_obj.h  match.cpp  match.h  messages.proto  operations.cpp  playerop.cpp  process_units.cpp  process_units.h  processor.cpp
protobuf_definitions/: common.proto  messages.proto  query.proto
python_modules/: chaotic.pyi  chaotic_test.py  common.py  messages_pb2.py  py_ChaoticCore.cpp
test/: test.cpp
